--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run VPS with SSHX
+      - name: Install tmate
         run: |
-          curl -sSf https://sshx.io/get | sh -s run
+          sudo apt update
+          sudo apt install -y tmate
+
+      - name: Start tmate session
+        run: |
+          tmate -S /tmp/tmate.sock new-session -d
+          tmate -S /tmp/tmate.sock wait tmate-ready
+          tmate -S /tmp/tmate.sock display -p 'SSH connection: {{%s}}' "$(tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}')"
+          tmate -S /tmp/tmate.sock display -p 'Web interface: {{%s}}' "$(tmate -S /tmp/tmate.sock display -p '#{tmate_web}')"
+
+      - name: Wait for you to connect
+        run: sleep 3600  # Keep session open for 1 hour
