--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -1,13 +1,20 @@
-name: BiraloVPS
+name: vps
 
-on: repository_dispatch
+# Controls when the workflow will run
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  start:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Install Tmate
-        run: |
-          sudo apt update
-          sudo apt install -y tmate openssh-client
-          tmate -F | tee session.txt
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run VPS
+        run: curl -sSf https://sshx.io/get | sh -s run
